@@ -6,6 +6,9 @@
       (it simply wouldn't have run them to generate Makefile's).
       This appears to be a rather old bug.
       [rt.cpan.org #2951]
+    * [rt.perl.org #4345] Arguments passed to WriteMakefile() would get
+      stopped upon by $self->{PARENT} in recursive builds in the process
+      of prepending a .. onto it.
 
 6.10_07 Sat Jul  5 16:12:52 PDT 2003
     * Fixing location of perllocal.pod so its always in INSTALLARCHLIB
